force-app/main/default/objects/Boletos__c/Boletos__c.object-meta.xml
<CustomObject>
    <label>Boleto</label>
    <nameField>
        <label>Nome de Boleto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boletos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>