force-app/main/default/objects/Boletos__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Código do Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Boletos</relationshipLabel>
    <relationshipName>Boletos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>