force-app/main/default/objects/Boletos__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>Nome do Banco</label>
    <length>40</length>
    <type>Text</type>
</CustomField>