force-app/main/default/objects/Boletos__c/fields/BusinessLocation__c.field-meta.xml
<CustomField>
    <fullName>BusinessLocation__c</fullName>
    <label>Local de Negócios</label>
    <length>4</length>
    <type>Text</type>
</CustomField>