force-app/main/default/objects/Boletos__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>