force-app/main/default/objects/Boletos__c/fields/CustomerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNumber__c</fullName>
    <label>Número do Pedido</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>