force-app/main/default/objects/Boletos__c/fields/Drawee__c.field-meta.xml
<CustomField>
    <fullName>Drawee__c</fullName>
    <label>Sacado</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>