force-app/main/default/objects/Boletos__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>Data de Vencimento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>