force-app/main/default/objects/Boletos__c/fields/GrantorName__c.field-meta.xml
<CustomField>
    <fullName>GrantorName__c</fullName>
    <label>Nome do Cedente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>