force-app/main/default/objects/Boletos__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instruções</label>
    <length>255</length>
    <type>Text</type>
</CustomField>