force-app/main/default/objects/Boletos__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Número da Nota Fiscal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>