force-app/main/default/objects/Boletos__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>Data de Emissão</label>
    <type>Date</type>
</CustomField>