force-app/main/default/objects/Boletos__c/fields/OurNumber__c.field-meta.xml
<CustomField>
    <fullName>OurNumber__c</fullName>
    <label>Nosso Número</label>
    <length>20</length>
    <type>Text</type>
</CustomField>