force-app/main/default/objects/Boletos__c/fields/WritableLine__c.field-meta.xml
<CustomField>
    <fullName>WritableLine__c</fullName>
    <externalId>true</externalId>
    <label>Linha Digitável</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>