force-app/main/default/objects/Boletos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IssueDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>Value__c</columns>
    <columns>AccountCode__c</columns>
    <columns>GrantorName__c</columns>
    <columns>InvoiceNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>